Add javac.model to exports